<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--    <include-->
<!--        layout="@layout/toolbar_input"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->

<!--    -->
    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="#6cf">
    </androidx.appcompat.widget.Toolbar>
<!--    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp">




        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="12dp">

            <ImageView
                android:id="@+id/book_cover_image_view"
                android:layout_width="90dp"
                android:layout_height="140dp"
                android:scaleType="fitXY"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/book_cover_image_view_hint"
                android:cropToPadding="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="-4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_title_text_view"
                    android:labelFor="@+id/book_title_edit_text" />

                <EditText
                    android:id="@id/book_title_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/book_title_edit_text_hint"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_author_text_view"
                    android:labelFor="@+id/book_author_edit_text" />

                <EditText
                    android:id="@id/book_author_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:inputType="text"
                    android:hint="@string/book_author_edit_text_hint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/translator_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_translator_text_view"
                    android:labelFor="@+id/book_translator_edit_text" />

                <EditText
                    android:id="@id/book_translator_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:inputType="text"
                    android:hint="@string/book_translator_edit_text_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_publisher_text_view"
                    android:labelFor="@+id/book_publisher_edit_text" />

                <EditText
                    android:id="@id/book_publisher_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:inputType="text"
                    android:hint="@string/book_publisher_edit_text_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_pubdate_text_view" />

                <EditText
                    android:id="@+id/book_pubyear_edit_text"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:inputType="number"
                    android:hint="@string/book_pubyear_edit_text_hint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <EditText
                    android:id="@+id/book_pubmonth_edit_text"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:inputType="number"
                    android:hint="@string/book_pubmonth_edit_text_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_isbn_text_view"
                    android:labelFor="@+id/book_isbn_edit_text" />

                <EditText
                    android:id="@id/book_isbn_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:inputType="number"
                    android:hint="@string/book_isbn_edit_text_hint" />
                <Button
                    android:id="@+id/button_isbn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="isbn获取"></Button>
            </LinearLayout>
<!---->

            <TextView
                android:textSize="16sp"
                android:ellipsize="end"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="Details" />
            <View
                android:background="#ffe0e0e0"
                android:layout_width="fill_parent"
                android:layout_height="1dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/book_edit_readingstatus_image_view"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="center"
                    android:contentDescription="@string/reading_status_image_view"
                    android:src="@drawable/ic_reading_status"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp" />


                <Spinner
                    android:id="@+id/reading_status_spinner"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@+id/book_edit_readingstatus_image_view"
                    android:backgroundTint="@color/colorSecondaryText"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp">

                <ImageView
                    android:id="@+id/book_edit_note_image_view"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="center"
                    android:contentDescription="@string/note_edit_text_hint"
                    android:src="@drawable/ic_notes"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp" />

                <EditText
                    android:id="@+id/book_notes_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/book_edit_note_image_view"
                    android:hint="@string/note_edit_text_hint"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp">

                <ImageView
                    android:id="@+id/book_edit_label_image_view"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="center"
                    android:contentDescription="@string/label_image_view"
                    android:src="@drawable/ic_label"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp" />


                <EditText
                    android:id="@+id/book_labels_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/book_edit_label_image_view"
                    android:focusable="false"
                    android:hint="@string/label_edit_text_hint"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textSize="16sp" />

            </RelativeLayout>


            <!---->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp">

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:isIndicator="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="52dp"
                    android:max="10"
                    android:numStars="5"
                    android:progress="2"
                    android:stepSize="0.5" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <Button
                    android:id="@+id/button_ok"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="OK"></Button>

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Cancel"></Button>
            </LinearLayout>



        </LinearLayout>


    </LinearLayout>
</LinearLayout>
