<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/list_item_relative_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:padding="6dp"
    android:clickable="true">

...
        android:layout_marginStart="16dp"
        android:contentDescription="@string/book_cover_image_view_hint"
        android:padding="0dp"
        android:src="@drawable/book_no_name" />

    <TextView
        android:id="@+id/list_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_alignTop="@id/list_cover_image_view"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="4dp"
...
